# carrier-pigeon

./: .gitignore  Cargo.toml  Quickstart.md  README.md  acknowledgements.md  connection_status_state_machine.md  quickstart.md  todo.md
benches/: downcast.rs  raw_tcp.rs  serde.rs  std_helper.rs  std_tcp.rs  std_udp.rs  tcp.rs  udp.rs  unreliable.rs
benches/control/: std_udp.rs
benches/helper/: mod.rs  test_messages.rs  test_packets.rs
carrier-pigeon-netmsg-derive/: Cargo.toml
carrier-pigeon-netmsg-derive/src/: lib.rs
docs/: acknowledgement_strategy.md  connection_status_state_machine.md  delivery_guarantees.md  quickstart.md  todo.md
examples/: client.rs  server.rs  shared.rs
src/: client.rs  connection.rs  header.rs  lib.rs  message_table.rs  messages.rs  net.rs  server.rs  tcp.rs  time.rs  udp.rs  util.rs
src/connection/: ack_system.rs  client.rs  client_connection.rs  mod.rs  ordering_system.rs  ping_system.rs  reliable.rs  reliable_system.rs  server.rs  server_connection.rs  test_connection.rs
src/transport/: client_std_udp.rs  mod.rs  server_std_udp.rs  std_udp.rs
tests/: cid_spec.rs  disconnect.rs  fail.rs  malicious.rs  message_table.rs  rtt_estimation.rs  send_recv.rs  test_packets.rs
tests/helper/: mod.rs  test_messages.rs  test_packets.rs
