[package]
name = "carrier-pigeon"
version = "0.1.0"
authors = ["Mitchell Marino <mitchoah@gmail.com>"]
edition = "2021"
description = "A rusty networking library for games."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/carrier-pigeon/"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "networking"]
categories = ["game-development", "network-programming", "asynchronous"]
autoexamples = false

[[example]]
name = "client"

[[example]]
name = "server"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "~1.0", features = ["derive"] }
simple_logger = "2.1.0"

[dependencies]
tokio = { version = ">1.15", features = ["rt", "net", "sync", "io-util"] }
serde = "~1.0"
bincode = "~1.3"
hashbrown = "~0.12"
log = "~0.4"
