[package]
name = "carrier_pigeon"
version = "0.3.0"
authors = ["Mitchell Marino <mitchoah@gmail.com>"]
edition = "2021"
description = "A rusty networking library for games."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/carrier_pigeon/"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "networking"]
categories = ["game-development", "network-programming"]
autoexamples = false

[[example]]
name = "client"

[[example]]
name = "server"

[dev-dependencies]
serde = { version = "~1.0", features = ["derive"] }
simple_logger = "2.1.0"

[dependencies]
crossbeam-channel = "~0.5"
serde = "~1.0"
bincode = "~1.3"
hashbrown = "~0.12"
log = "~0.4"
