[package]
name = "carrier-pigeon"
version = "0.3.0"
authors = ["Mitchell Marino <mitchoah@gmail.com>"]
edition = "2021"
description = "A rusty networking library for games."
readme = "README.md"
repository = "https://github.com/MitchellMarinoDev/carrier-pigeon/"
license = "MIT OR Apache-2.0"
keywords = ["game", "gamedev", "networking"]
categories = ["game-development", "network-programming"]
autoexamples = false

[features]
default = []
# Adds `Resource` derives to the `Client` and `Server` types.
bevy = ["dep:bevy"]

[[example]]
name = "client"

[[example]]
name = "server"

[dev-dependencies]
env_logger = "0.10"

[dependencies]
bevy = { version = "0.9", optional = true }
dashmap = "5.4"
serde = { version = "1.0", features = ["derive"] }
downcast-rs = "1.2"
bincode = "1.3"
hashbrown = "0.13"
log = "0.4"
